sre-challenge/fiskaly_q2/helloworld/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: 675261166794.dkr.ecr.eu-central-1.amazonaws.com/fiskaly-task1:1.0-amd64
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "5m"
          limits:
            memory: "64Mi"
            cpu: "10m"
