sre-challenge/fiskaly_q2/helloworld/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  selector:
    app: helloworld
  ports:
  - name: http
    port: 8080
    targetPort: http
